--- a/progress.html
+++ b/progress.html
@@ -46,7 +46,7 @@ hr {
 
 <div class="bgimg">
   <div class="topleft">
-    <p>Logo: Wahe-Evolution Information Technologies</p>
+    <p>Wahe-Evolution Information Technologies</p>
   </div>
   <div class="middle">
     <h1>COMING SOON</h1>
